Versão não funcional de Assinatura

--- a/force-app/main/default/aura/assinaturaView/assinaturaView.cmp
+++ b/force-app/main/default/aura/assinaturaView/assinaturaView.cmp
@@ -5,12 +5,12 @@
 
     <!-- Criando um atributo que recebe uma Lista -->
     <aura:attribute name="columns" type="List" />
-    <aura:attribute name="livroColumns" type="List" />
+    <aura:attribute name="periodicosColumns" type="List" />
     <aura:attribute name="leitorColumns" type="List" />
 
     <!-- Criando um atributo que recebe uma Lista -->
-    <aura:attribute name="emprestimos" type="List" />
-    <aura:attribute name="livros" type="List" />
+    <aura:attribute name="assinaturas" type="List" />
+    <aura:attribute name="periodicoss" type="List" />
     <aura:attribute name="leitores" type="List" />
 
     <!-- Criando um atributo que recebe uma Booleano, com valor pradão false -->
@@ -18,13 +18,13 @@
     <aura:attribute name="detailModal" type="Boolean" default="false" />
     <aura:attribute name="leitorModal" type="Boolean" default="false" />
 
-    <!-- Criando um atributo que recebe uma lista de ids de emprestimo -->
-    <aura:attribute name="emprestimoIds" type="List" />
+    <!-- Criando um atributo que recebe uma lista de ids de assinatura -->
+    <aura:attribute name="assinaturaIds" type="List" />
 
     <!-- Criando um atributo que recebe um Id -->
     <aura:attribute name="id" type="Id" />
     <aura:attribute name="leitorId" type="Id" />
-    <aura:attribute name="livroId" type="Id" />
+    <aura:attribute name="periodicosId" type="Id" />
 
     <!-- Criando um atributo que recebe uma String -->
     <aura:attribute name="keyword" type="String" default="" />
@@ -43,21 +43,20 @@
     <aura:attribute name="selectedRows" type="List" />
 
     <!-- Criando os atributos para receber os dados de entrada do usuário ou os dados que estão vindo do meu back-end -->
-    <aura:attribute name="titulo" type="String" />
-    <aura:attribute name="autor" type="String" />
+    <aura:attribute name="nomePeriodico" type="String" />
     <aura:attribute name="nome" type="String" />
     <aura:attribute name="sobrenome" type="String" />
     <aura:attribute name="devolvido" type="Boolean" default="false" />
-    <aura:attribute name="dataEmprestimo" type="Date" />
-    <aura:attribute name="dataDevolucao" type="Date" />
+    <aura:attribute name="tipoAssinatura" type="String" />
+    <aura:attribute name="dataAssinatura" type="Date" />
 
     <!--Content-->
-    <!-- Crio um card que recebe como título "Lista de emprestimos" e um icone de Pessoas -->
-    <lightning:card variant="Narrow" title="Lista de empréstimos" iconName="standard:partners">
+    <!-- Crio um card que recebe como título "Lista de assinaturas" e um icone de Pessoas -->
+    <lightning:card variant="Narrow" title="Lista de Assinaturas" iconName="standard:partners">
         <aura:set attribute="actions">
-            <!-- Crio um botão que executa uma função ao ser clicado (updateEmprestimosDevolvidos do meu emprestimoViewController) -->
-            <lightning:button label="Devolver" onclick="{!c.updateEmprestimosDevolvidos}" name="novoLeitor" />
-            <!-- Crio um botão que executa uma função ao ser clicado (showModal do meu emprestimoViewController) -->
+            <!-- Crio um botão que executa uma função ao ser clicado (updateAssinaturasDevolvidos do meu assinaturaViewController) -->
+            <lightning:button label="Devolver" onclick="{!c.updateAssinaturasDevolvidos}" name="novoLeitor" />
+            <!-- Crio um botão que executa uma função ao ser clicado (showModal do meu assinaturaViewController) -->
             <lightning:button label="Novo" onclick="{!c.showModal}" name="novoLeitor" />
         </aura:set>
         <lightning:layout multipleRows="true" verticalAlign="end">
@@ -67,21 +66,6 @@
                     label="Insira a palavra chave e pressione 'Pesquisar'" type="search" />
             </lightning:layoutItem>
 
-            <lightning:layoutItem padding="horizontal-small" size="4">
-                <!-- 
-                    Defino um select que recebe o valor que for selecionado para a minha selectedFilter
-                    E onchange, onde toda vez que trocar de uma valor, disparo essa função
-                -->
-                <lightning:select name="filterId" label="Selecione status de devolvido:" aura:id="filterId"
-                    value="{!v.selectedFilter}" onchange="{! c.searchEmprestimos }">
-                    <!-- Defino os valores em items para percorrer -->
-                    <aura:iteration items="{!v.filters}" var="filter">
-                        <!-- Atribuo para as opções de select o texto o valor e se está selecionado onde defino o atributo filters -->
-                        <option text="{!filter.label}" value="{!filter.value}" selected="{!filter.selected}" />
-                    </aura:iteration>
-                </lightning:select>
-            </lightning:layoutItem>
-
             <lightning:layoutItem padding="horizontal-small" size="2">
                 <!-- Crio um botão recebendo um onclick que dispara aa função handleClick -->
                 <lightning:button label="Pesquisar" iconName="utility:search" iconPosition="left"
@@ -89,22 +73,22 @@
             </lightning:layoutItem>
 
         </lightning:layout>
-        <!-- Crio um paragrafo que recebe o tamanho (quantidade de registros) que tenho detron da minha lista de emprestimos -->
+        <!-- Crio um paragrafo que recebe o tamanho (quantidade de registros) que tenho detron da minha lista de assinaturas -->
         <p class="slds-p-horizontal_small">
-            Total de registros: {! v.emprestimos.length }
+            Total de registros: {! v.assinaturas.length }
         </p>
         <lightning:layout multipleRows="true">
             <lightning:layoutItem padding="around-small" size="12">
                 <!-- 
                     Crio datatable para gerar minha tabela na tela
                     Essa minha tabela recebe as columns (colunas) definidas na minha função init()
-                    Recebe os dados que são atribuídos ao meu atributo emprestimos na função searchEmprestimos()
+                    Recebe os dados que são atribuídos ao meu atributo assinaturas na função searchAssinaturas()
                     Possui uma ação por linha que recebe handleRowAction(), que por sua vez verifica qual ação que deseja executar
-                    Possui disparo de ação por checkbox handleSelectedEmprestimos
+                    Possui disparo de ação por checkbox handleSelectedAssinaturas
                 -->
-                <lightning:datatable columns="{! v.columns }" data="{! v.emprestimos }" keyField="id"
+                <lightning:datatable columns="{! v.columns }" data="{! v.assinaturas }" keyField="id"
                     onrowaction="{! c.handleRowAction }" showRowNumberColumn="true" selectedRows="{! v.selectedRows }"
-                    onrowselection="{! c.handleSelectedEmprestimos }" />
+                    onrowselection="{! c.handleSelectedAssinaturas }" />
             </lightning:layoutItem>
         </lightning:layout>
     </lightning:card>
@@ -123,7 +107,7 @@
                         <span class="slds-assistive-text">Fechar</span>
                     </button>
 
-                    <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Buscar Livros Disponível</h2>
+                    <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Buscar periodicoss Disponível</h2>
                 </header>
                 <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
                     <lightning:layout multipleRows="true" verticalAlign="end">
@@ -131,29 +115,29 @@
                         <lightning:layoutItem size="8" padding="around-medium">
                             <!-- Input para atribuir um valor a keyword -->
                             <lightning:input type="text" value="{!v.keyword}"
-                                label="Informe o livro que deseja realizar o empréstimo" />
+                                label="Informe o periodicos que deseja realizar o empréstimo" />
                         </lightning:layoutItem>
 
                         <lightning:layoutItem size="4" padding="around-medium">
-                            <!-- Botão para disparar função searchLivros -->
+                            <!-- Botão para disparar função searchperiodicoss -->
                             <lightning:button label="Pesquisar" iconName="utility:search" iconPosition="left"
-                                onclick="{! c.searchLivros }" />
+                                onclick="{! c.searchperiodicoss }" />
                         </lightning:layoutItem>
 
-                        <!-- Mostro o tamanho da minha lista livros -->
+                        <!-- Mostro o tamanho da minha lista periodicoss -->
                         <p class="slds-p-horizontal_small">
-                            Total de registros: {! v.livros.length }
+                            Total de registros: {! v.periodicoss.length }
                         </p>
 
                         <!-- 
                             Crio datatable para gerar minha tabela no modal
-                            Essa minha tabela recebe as livroColumns (colunas dos livros) definidas na minha função init()
-                            Recebe os dados que são atribuídos ao meu atributo livros na função searchLivros()
-                            Possui disparo de ação por checkbox handleSelectedLivro
+                            Essa minha tabela recebe as periodicosColumns (colunas dos periodicoss) definidas na minha função init()
+                            Recebe os dados que são atribuídos ao meu atributo periodicoss na função searchperiodicoss()
+                            Possui disparo de ação por checkbox handleSelectedperiodicos
                         -->
-                        <lightning:datatable columns="{! v.livroColumns }" data="{! v.livros }" keyField="id"
+                        <lightning:datatable columns="{! v.periodicosColumns }" data="{! v.periodicoss }" keyField="id"
                             showRowNumberColumn="true" selectedRows="{! v.selectedRows }"
-                            onrowselection="{! c.handleSelectedLivro }" />
+                            onrowselection="{! c.handleSelectedperiodicos }" />
 
                     </lightning:layout>
                 </div>
@@ -162,8 +146,8 @@
                     <!-- Botão que possui onclick para fechar meu modal -->
                     <button class="slds-button slds-button_neutral" onclick="{!c.closeModal}">Cancelar</button>
 
-                    <!-- Botão que possui onclick que recebe a função validateLivroId() -->
-                    <button class="slds-button slds-button_brand" onclick="{!c.validateLivroId}">Próximo</button>
+                    <!-- Botão que possui onclick que recebe a função validateperiodicosId() -->
+                    <button class="slds-button slds-button_brand" onclick="{!c.validateperiodicosId}">Próximo</button>
                 </footer>
             </div>
         </section>
@@ -211,7 +195,7 @@
                         <!-- 
                             Crio datatable para gerar minha tabela no modal
                             Essa minha tabela recebe as leitorColumns (colunas dos leitores) definidas na minha função init()
-                            Recebe os dados que são atribuídos ao meu atributo livros na função searchLeitores()
+                            Recebe os dados que são atribuídos ao meu atributo periodicoss na função searchLeitores()
                             Possui disparo de ação por checkbox handleSelectedLeitor
                         -->
                         <lightning:datatable columns="{! v.leitorColumns }" data="{! v.leitores }" keyField="id"
@@ -225,7 +209,7 @@
                     <!-- Botão que possui onclick para fechar meu modal -->
                     <button class="slds-button slds-button_neutral" onclick="{!c.backModal}">voltar</button>
 
-                    <!-- Botão que possui onclick que recebe a função upsertEmprestimo() para atualizar ou inserir um emprestimo -->
+                    <!-- Botão que possui onclick que recebe a função upsertEmprestimo() para atualizar ou inserir um assinatura -->
                     <button class="slds-button slds-button_brand" onclick="{!c.upsertEmprestimo}">Salvar</button>
                 </footer>
             </div>
@@ -259,10 +243,7 @@
                                 value="{!v.devolvido}" />
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="horizontal-small" size="6">
-                            <lightning:input type="text" value="{!v.titulo}" label="Título do Livro:" disabled="true" />
-                        </lightning:layoutItem>
-                        <lightning:layoutItem padding="horizontal-small" size="6">
-                            <lightning:input type="text" value="{!v.autor}" label="Autor do Livro:" disabled="true" />
+                            <lightning:input type="text" value="{!v.nomePeriodico}" label="Nome do periodico:" disabled="true" />
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="horizontal-small" size="6">
                             <lightning:input type="text" value="{!v.nome}" label="Nome do(a) Leitor(a):"
@@ -273,12 +254,12 @@
                                 disabled="true" />
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="horizontal-small" size="6">
-                            <lightning:input type="date" name="input7" label="Data do empréstimo" disabled="true"
-                                value="{!v.dataEmprestimo}" />
+                            <lightning:input type="text" label="Tipo" disabled="true"
+                                value="{!v.tipoAssinatura}" />
                         </lightning:layoutItem>
                         <lightning:layoutItem padding="horizontal-small" size="6">
-                            <lightning:input type="date" name="input7" label="Data da devolução" disabled="true"
-                                value="{!v.dataDevolucao}" />
+                            <lightning:input type="date" label="Data da Assinatura" disabled="true"
+                                value="{!v.dataAssinatura}" />
                         </lightning:layoutItem>
 
                     </lightning:layout>
